public static class ConstStrings
{
    public const string FADE_IMAGE_FADE = "Fade";
    public const string FADE_IMAGE_UNFADE = "UnFade";

    public const string MESSAGEUI_SHOW = "Show";
    public const string MESSAGEUI_HIDE = "Hide";
    public const string MESSAGE_NO_BLASTABLE = "No blastable tile, Let me help you";
    public const string MESSAGE_GAME_OVER = "Game Over!";

    public const string MENU_MAIN_MENU = "MainMenu";
    public const string MENU_CREATE_LEVEL = "CreateLevelMenu";
    public const string MENU_SET_GOAL = "SetGoalMenu";
    public const string MENU_GOAL_MOVE = "GoalMoveMenu";
    public const string MENU_GAME_OVER = "GameOverMenu";

    public const string VISUAL_TILE_ANIM = "Anim";
    public const string VISUAL_TILE_UNBLAST = "UnBlast";
    public const string VISUAL_TILE_RESET = "Reset";

    public const string SFX_TILE_BLAST = "TileBlast";
    public const string SFX_TILE_UNBLAST = "TileUnBlast";
    public const string SFX_TILE_CHANGE_SPRITE = "SpriteChange";
    public const string SFX_MESSAGE_UI = "MessageUI";
    public const string SFX_WIN = "Win";
    public const string SFX_LOSE = "Lose";
    public const string SFX_SLIDER = "Slider";
}
